--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongobatch-js",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "process mongodb collections in batches",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "url": "git://github.com/andrasq/node-mongobatch-js"
   },
   "engines": {
-    "node": ">=0.0.0"
+    "node": "*"
   },
   "scripts": {
     "test": "nodeunit"
@@ -27,7 +27,7 @@
     "access"
   ],
   "dependencies": {
-    "mongodb":"~1"
+    "mongodb":"*"
   },
   "devDependencies": {
     "nodeunit": "*"
